feat: 更新 Gradle 版本并添加设置界面
- 将 Gradle 版本从 8.9 升级到 8.13，并更新 Android Gradle 插件版本
- 在 FirstFragment 中添加设置界面，允许用户自定义充电阈值和通知消息
- 为 FloatingActionButton 添加内容描述以提升无障碍体验
- 在 strings.xml 中添加新的字符串资源
- 更新布局文件以支持新的设置输入控件
- 修改 BatteryLevelReceiver 使用默认设置值
- 生成新的基线性能分析文件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="lorem_ipsum">
         充电通知
     </string>
+    <string name="todo">TODO</string>
+    <string name="save_settings">Save Settings</string>
+    <string name="enter_threshold_percentage_0_100">Enter threshold percentage (0-100)</string>
+    <string name="enter_custom_notification_message">Enter custom notification message</string>
 </resources>
