--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,23 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="channel_name">ChargeNotify</string>
-    <string name="channel_description"></string>
+    <string name="channel_description" />
     <string name="lorem_ipsum">
         充电通知
     </string>
     <string name="todo">TODO</string>
     <string name="save_settings">Save Settings</string>
-    <string name="enter_threshold_percentage_0_100">Enter threshold percentage (0-100)</string>
+    <string name="enter_threshold_percentage_0_100">Enter threshold percentage (0–100)</string>
     <string name="enter_custom_notification_message">Enter custom notification message</string>
+
+    <string name="open_settings">打开设置</string>
+    <string name="enabled">开启</string>
+    <string name="disabled">关闭</string>
+    <string name="startup_notify_enabled_label">启动时发送通知</string>
+    <string name="notify_message_label">通知内容</string>
+    <string name="threshold_label">提醒阈值</string>
+    <string name="startup_notify_enabled_value">启动通知：%1$s</string>
+    <string name="notify_message_value">通知内容：%1$s</string>
+    <string name="threshold_value">提醒阈值：%1$s%%</string>
+    <string name="settings_hint">保存后返回首页查看</string>
 </resources>
